Release notes
-------------

Date          Version   Comment
2021/08/31    1.4.2     Update for Book Word import plugin compatibility.
2021/07/14    1.4.1     Require latest version of Book Word import plugin.
2020/07/05    1.4.0     Refactor code to use Book wordconverter class.
2018/06/04    1.3.7     Support Privacy API for GDPR compliance.
2017/11/12    1.3.6     Treat formatted lists as Bullet Lists, remove default line-height property.
2017/09/11    1.3.5     Disable Word Import button if the editor field does not support filearea.
2017/08/25    1.3.4     Don't raise the memory limit for XSLT any more.
2017/08/14    1.3.3     Handle list item duplication bug inside adjacent table cells.
2017/08/07    1.3.2     Handle Bootstrap Alert components.
2017/04/23    1.3.1     Use Bootstrap panel class for textboxes, use canonical tempdir reference.
2017/02/12    1.3.0     Handle textboxes (convert from Word tables) and quotations.
2017/01/05    1.2.1     Fix error when handling empty table cells.
2016/12/13    1.2.0     Improve formatting of tables and figures, support RTL languages better.
2016/01/20    1.1.2     Clean up spans to omit default text colour, remove underline from links.
2015/12/08    1.1.1     Fix code to pass codechecker, use POST instead of GET to upload Word file.
2015/12/08    1.1.0     Fix error importing some files, clean code to pass codechecker, upgrade maturity to stable.
2015/10/15    1.0.0     Make uninstall process safer, mark first officially approved release on Moodle plugins directory.
2015/10/14    0.9.5     Use Moodle exception class to flag errors, parameterize heading style to element map.
2015/10/12    0.9.4     Correct context ID handling to work on all platforms, improve error handling.
2015/09/28    0.9.3     Implement drag and drop support.
2015/09/25    0.9.2     Insert content whereever the cursor is, not at the end of the text area.