@@ -24,8 +24,6 @@
 
 namespace atto_wordimport\privacy;
 
-defined('MOODLE_INTERNAL') || die();
-
 /**
  * Privacy Subsystem for atto_wordimport implementing null_provider.
  *
