@@ -24,9 +24,9 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2021083100;        // The current plugin version (Date: YYYYMMDDXX).
+$plugin->version   = 2023110600;        // The current plugin version (Date: YYYYMMDDXX).
 $plugin->requires  = 2016052300;        // Requires Moodle 3.1 or higher.
 $plugin->component = 'atto_wordimport';  // Full name of the plugin (used for diagnostics).
 $plugin->maturity  = MATURITY_STABLE;
-$plugin->release   = '1.4.2 (Build 2021083100)'; // Human readable version information.
-$plugin->dependencies = array('booktool_wordimport' => 2021083100);
+$plugin->release   = '1.4.3 (Build 2023110600)'; // Human readable version information.
+$plugin->dependencies = array('booktool_wordimport' => 2023021700);
