@@ -1,1 +1,1 @@
-YUI.add("moodle-atto_wordimport-button",function(e,t){var n="atto_wordimport",r='<img src="{{url}}" alt="{{alt}}" {{#if width}}width="{{width}}" {{/if}}{{#if height}}height="{{height}}" {{/if}}{{#if presentation}}role="presentation" {{/if}}style="{{alignment}}{{margin}}{{customstyle}}"{{#if classlist}}class="{{classlist}}" {{/if}}{{#if id}}id="{{id}}" {{/if}}/>';e.namespace("M.atto_wordimport").Button=e.Base.create("button",e.M.editor_atto.EditorPlugin,[],{_currentSelection:null,initializer:function(){if(this.get("disabled"))return;this.addButton({icon:"wordimport",iconComponent:n,callback:function(){this.get("host").showFilepicker("link",this._handleWordFileUpload,this)},callbackArgs:"wordimport"}),this.editor.on("drop",this._handleWordFileDragDrop,this)},_handleWordFileUpload:function(t){var n=this.get("host"),r=n.get("filepickeroptions"),i=r.link,s=this,o=new XMLHttpRequest;if(t.url==="")return!1;if(/\.docx$/.test(t.file)===!1)return!1;o.onreadystatechange=function(){var t;if(o.readyState===4)if(o.status===200){t=JSON.parse(o.responseText);if(t){if(t.error)return new M.core.ajaxException(t);n.insertContentAtFocusPoint(t.html),s.markUpdated()}}else e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})})};var u="filename="+t.file,a="ctx_id="+i.context.id,f="itemid="+i.itemid,l="sesskey="+M.cfg.sesskey,c="/lib/editor/atto/plugins/wordimport/import.php?";return o.open("GET",M.cfg.wwwroot+c+a+"&"+f+"&"+u+"&"+l,!0),o.send(),!0},_handleWordFileDragDrop:function(t){var i=this,s=this.get("host"),o=e.Handlebars.compile(r),u="application/vnd.openxmlformats-officedocument.wordprocessingml.document";s.saveSelection(),t=t._event;var a=t.dataTransfer&&t.dataTransfer.files&&t.dataTransfer.files.length;if(a&&u===t.dataTransfer.files[0].type){var f=s.get("filepickeroptions").link,l=f.savepath===undefined?"/":f.savepath,c=new FormData,h=0,p="",d=new XMLHttpRequest,v="",m=Object.keys(f.repositories);t.preventDefault(),t.stopPropagation(),c.append("repo_upload_file",t.dataTransfer.files[0]),c.append("itemid",f.itemid);for(var g=0;g<m.length;g++)if(f.repositories[m[g]].type==="upload"){c.append("repo_id",f.repositories[m[g]].id);break}c.append("env",f.env),c.append("sesskey",M.cfg.sesskey),c.append("client_id",f.client_id),c.append("savepath",l),c.append("ctx_id",f.context.id),h=(new Date).getTime(),p="moodleimage_"+Math.round(Math.random()*1e5)+"-"+h,s.focus(),s.restoreSelection(),v=o({url:M.util.image_url("i/loading_small","moodle"),alt:M.util.get_string("uploading",n),id:p}),s.insertContentAtFocusPoint(v),i.markUpdated(),d.onreadystatechange=function(){var t=i.editor.one("#"+p),n,r;if(d.readyState===4)if(d.status===200){n=JSON.parse(d.responseText);if(n){n.error&&(t&&t.remove(!0),e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("fileuploadfailed","atto_wordimport")})})),r=n.file,n.event&&n.event==="fileexists"&&(r=n.newfile),d.onreadystatechange=function(){var t=i.editor.one("#"+p),n,r;d.readyState===4&&(d.status===200?(n=JSON.parse(d.responseText),n&&(n.error&&(t&&t.remove(!0),e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("fileconversionfailed","atto_wordimport")})})),r=e.Node.create(n.html),t?t.replace(r):i.editor.appendChild(r))):e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})}))};var s="ctx_id="+f.context.id,o="itemid="+f.itemid,u="filename="+r,a="sesskey="+M.cfg.sesskey,l=s+"&"+o+"&"+u+"&"+a,c="/lib/editor/atto/plugins/wordimport/import.php?";d.open("POST",M.cfg.wwwroot+c+l,!0),d.send(),i.markUpdated()}}else e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})}),t&&t.remove(!0)},d.open("POST",M.cfg.wwwroot+"/repository/repository_ajax.php?action=upload",!0),d.send(c)}return!1}},{ATTRS:{disabled:{value:!0},area:{value:{}}}})},"@VERSION@",{requires:["moodle-editor_atto-plugin"]});
+YUI.add("moodle-atto_wordimport-button",function(c,e){var f="atto_wordimport";c.namespace("M.atto_wordimport").Button=c.Base.create("button",c.M.editor_atto.EditorPlugin,[],{_currentSelection:null,initializer:function(){var e;this.get("disabled")||((e=this).addButton({icon:"wordimport",iconComponent:f,callback:function(){e._currentSelection=this.get("host").getSelection(),this.get("host").showFilepicker("link",this._handleWordFileUpload,this)},callbackArgs:"wordimport"}),this.editor.on("drop",this._handleWordFileDragDrop,this))},_handleWordFileUpload:function(e){var t,i,o=this.get("host"),r=o.get("filepickeroptions"),r=r.link,n=this,a=new XMLHttpRequest;return""!==e.url&&(!1!==/\.docx$/.test(e.file)&&(a.onreadystatechange=function(){var e;if(4===a.readyState)if(200===a.status){if(e=JSON.parse(a.responseText)){if(e.error)return new M.core.ajaxException(e);o.setSelection(n._currentSelection),o.insertContentAtFocusPoint(e.html),n.markUpdated()}}else c.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})})},e="filename="+e.file,t="ctx_id="+r.context.id,r="itemid="+r.itemid,i="sesskey="+M.cfg.sesskey,a.open("GET",M.cfg.wwwroot+"/lib/editor/atto/plugins/wordimport/import.php?"+t+"&"+r+"&"+e+"&"+i,!0),a.send(),!0))},_handleWordFileDragDrop:function(e){var n,t,a,s,i,o,r,l=this,d=this.get("host"),p=c.Handlebars.compile('<img src="{{url}}" alt="{{alt}}" {{#if width}}width="{{width}}" {{/if}}{{#if height}}height="{{height}}" {{/if}}{{#if presentation}}role="presentation" {{/if}}style="{{alignment}}{{margin}}{{customstyle}}"{{#if classlist}}class="{{classlist}}" {{/if}}{{#if id}}id="{{id}}" {{/if}}/>');if(d.saveSelection(),(e=e._event).dataTransfer&&e.dataTransfer.files&&e.dataTransfer.files.length&&"application/vnd.openxmlformats-officedocument.wordprocessingml.document"===e.dataTransfer.files[0].type){for(i=(n=d.get("filepickeroptions").link).savepath===undefined?"/":n.savepath,t=new FormData,s=new XMLHttpRequest,o=Object.keys(n.repositories),e.preventDefault(),e.stopPropagation(),t.append("repo_upload_file",e.dataTransfer.files[0]),t.append("itemid",n.itemid),r=0;r<o.length;r++)if("upload"===n.repositories[o[r]].type){t.append("repo_id",n.repositories[o[r]].id);break}t.append("env",n.env),t.append("sesskey",M.cfg.sesskey),t.append("client_id",n.client_id),t.append("savepath",i),t.append("ctx_id",n.context.id),e=(new Date).getTime(),a="moodleimage_"+Math.round(1e5*Math.random())+"-"+e,d.focus(),d.restoreSelection(),i=p({url:M.util.image_url("i/loading_small","moodle"),alt:M.util.get_string("uploading",f),id:a}),d.insertContentAtFocusPoint(i),l.markUpdated(),s.onreadystatechange=function(){var e,t,i,o,r=l.editor.one("#"+a);4===s.readyState&&(200===s.status?(t=JSON.parse(s.responseText))&&(t.error&&(r&&r.remove(!0),c.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("fileuploadfailed","atto_wordimport")})})),e=t.file,t.event&&"fileexists"===t.event&&(e=t.newfile),s.onreadystatechange=function(){var e,t=l.editor.one("#"+a);4===s.readyState&&(200===s.status?(e=JSON.parse(s.responseText))&&(e.error&&(t&&t.remove(!0),c.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("fileconversionfailed","atto_wordimport")})})),e=c.Node.create(e.html),t?t.replace(e):l.editor.appendChild(e)):c.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})}))},t="ctx_id="+n.context.id,i="itemid="+n.itemid,o="sesskey="+M.cfg.sesskey,s.open("POST",M.cfg.wwwroot+"/lib/editor/atto/plugins/wordimport/import.php?"+(t+"&"+i+"&"+("filename="+e)+"&"+o),!0),s.send(),l.markUpdated()):(c.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})}),r&&r.remove(!0)))},s.open("POST",M.cfg.wwwroot+"/repository/repository_ajax.php?action=upload",!0),s.send(t)}return!1}},{ATTRS:{disabled:{value:!0},area:{value:{}}}})},"@VERSION@",{requires:["moodle-editor_atto-plugin"]});
